MODIFF UNITEST IN SphereTest